Field Hunt/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NPSP_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>gf_sf__Donations</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Later</fullName>
        </values>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Paid</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>gf_sf__Event Registrations</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Paid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>gf_sf__Memberships</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Later</fullName>
        </values>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Paid</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>gf_sf__Product Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Later</fullName>
        </values>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Paid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>gf_sps__Sponsorship</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bill Me Later</fullName>
        </values>
        <values>
            <fullName>Bill Me Now</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Paid</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_R_Account_Code__c</fullName>
        <description>This field is used when integrating with Great Plains. It contains the correct Accounts Receivable code for each Opportunity. 000-1110 for Memberships, 000-1165 for Grants, and 000-1145 for everything else.</description>
        <formula>CASE(RecordType.Id,
&quot;012j0000000z3Rt&quot;,&quot;000-1110&quot;,
&quot;012j0000000z3Rs&quot;,&quot;000-1165&quot;,
&quot;000-1145&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used when integrating with Great Plains. It contains the correct Accounts Receivable code for each Opportunity. 000-1110 for Memberships, 000-1165 for Grants, and 000-1145 for everything else.</inlineHelpText>
        <label>A/R Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Cycle__c</fullName>
        <description>This is the renewal cycle, and comes directly from the Account information.</description>
        <formula>TEXT(Account.Renewal_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the renewal cycle, and comes directly from the Account information.</inlineHelpText>
        <label>Account Renewal Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rosters__c</fullName>
        <description>##Conga created btn:00bj0000000YeL3</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Roster]a0kf100000FxNgd?pv0=&quot; + AccountId +
&quot;&amp;templateid=a0sj0000000QhAB&quot; + 
&quot;&amp;ofn=&quot; +  SUBSTITUTE( Account.Name , &quot;&amp;&quot;, &quot;and&quot;)   + &quot; Active Roster&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <label>Account Rosters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded_DEPRECATED__c</fullName>
        <label>Amount Refunded [DEPRECATED]</label>
        <summarizedField>gf_pp__Allocation__c.gf_pp__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>gf_pp__Allocation__c.gf_pp__Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>gf_pp__Allocation__c.gf_pp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <description>This is what is still owed on the Opportunity (Amount - Total Paid - Amount Refunded).</description>
        <formula>Amount -  Total_Paid_Deprecated__c - Amount_Refunded_DEPRECATED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is what is still owed on the Opportunity (Amount - Total Paid - Amount Refunded).</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Me_Later_Date__c</fullName>
        <description>Use this date if the invoice should be billed sometime in the future.</description>
        <inlineHelpText>Enter the date this invoice should be mailed.</inlineHelpText>
        <label>Bill Me Later Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_Year_and_Month__c</fullName>
        <formula>TEXT(YEAR(CloseDate)) &amp; &quot; &quot; &amp;
CASE(MONTH( CloseDate ), 
1, &quot;01. January&quot;, 
2, &quot;02. February&quot;, 
3, &quot;03. March&quot;, 
4, &quot;04. April&quot;, 
5, &quot;05. May&quot;, 
6, &quot;06. June&quot;, 
7, &quot;07. July&quot;, 
8, &quot;08. August&quot;, 
9, &quot;09. September&quot;, 
10, &quot;10. October&quot;, 
11, &quot;11. November&quot;, 
12, &quot;12. December&quot;, 
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Year and Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complimentary_Registrations_Unfulfilled__c</fullName>
        <label>Complimentary Registrations Unfulfilled</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complimentary_Registrations__c</fullName>
        <description>This is the number of complimentary registrations given to an organization when they sponsor an event.</description>
        <inlineHelpText>Enter is the number of complimentary registrations given to an organization when they sponsor an event.</inlineHelpText>
        <label>Complimentary Registrations</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Invoice_Template_ID__c</fullName>
        <description>Depending on the Record Type, selects the correct</description>
        <formula>CASE( RecordTypeId, 
&quot;012j0000000z3Rr&quot;, &quot;a0sj0000000Ptia&quot;, 
&quot;012j0000000z3Ru&quot;, &quot;a0sj0000000PtOX&quot;,
&quot;012j0000000z3Rt&quot;, &quot;a0sj0000000Pzwf&quot;,
&quot;012j0000000L7WT&quot;, &quot;a0sj0000001tb3d&quot;,
&quot;012j0000000z3Ts&quot;, &quot;a0sj0000002FdbV&quot;,
&quot;012j0000000z3Rs&quot;, &quot;a0sj0000002FdbV&quot;,
&quot;012j0000000L81A&quot;, &quot;a0sj0000002FdbV&quot;,
&quot;012j00000004VKZ&quot;,&quot;a0sj0000002FdbV&quot;,
&quot;012j00000004VX4&quot;,&quot;a0sj0000002FdbV&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Invoice Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Renewal_Form_Received__c</fullName>
        <description>The date the renewal form is received.</description>
        <inlineHelpText>Enter the date when the membership form is received. Leave blank if they paid without sending a renewal form.</inlineHelpText>
        <label>Date Renewal Form Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Account__c</fullName>
        <description>This field is used in the Great Plains integration if an invoice is deferred revenue. Assigns &quot;000-2095&quot; to conference opportunities, &quot;000-2080&quot; to membership opportunities, and &quot;000-2090&quot; to anything else.</description>
        <formula>IF( LEFT(TEXT(General_Ledger_Code__c),3) = &quot;350&quot; , &quot;000-2095&quot;,
IF( LEFT(TEXT(General_Ledger_Code__c),8) = &quot;190-3100&quot;, &quot;000-2080&quot;, &quot;000-2090&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used in the Great Plains integration if an invoice is deferred revenue. Assigns &quot;000-2095&quot; to conference opportunities, &quot;000-2080&quot; to membership opportunities, and &quot;000-2090&quot; to anything else.</inlineHelpText>
        <label>Deferred Revenue Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drupal_Product_Line_Item_ID__c</fullName>
        <description>This is the Product Line Item ID, used to populate the Opportunity Product.</description>
        <inlineHelpText>This is the Product Line Item ID, used to populate the Opportunity Product.</inlineHelpText>
        <label>Drupal Product Line Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drupal_Product_Quantity__c</fullName>
        <description>This is the Product Quantity from the website, used to populate the Opportunity Product.</description>
        <inlineHelpText>This is the Product Quantity from the website, used to populate the Opportunity Product.</inlineHelpText>
        <label>Drupal Product Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drupal_Product_SKU__c</fullName>
        <description>This is the Product SKU selected in Drupal.</description>
        <inlineHelpText>This is the Product SKU selected in Drupal.</inlineHelpText>
        <label>Drupal Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <description>This field is used with Jitterbit, Data Loader, or other tools to force an update of the opportunity.</description>
        <inlineHelpText>This field is used with Jitterbit, Data Loader, or other tools to force an update of the opportunity.</inlineHelpText>
        <label>Force Update</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account__c</fullName>
        <description>This is the descriptive name of the General Ledger Account associated with this Opportunity Record.</description>
        <inlineHelpText>Select the correct General Ledger Account. This field is automatically set for Memberships (based on New or Renewal), and Event Registrations (based on the General Ledger Account on the Campaign.)</inlineHelpText>
        <label>General Ledger Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Income - E-communications</fullName>
                </value>
                <value>
                    <fullName>Ad Income - Giving Forum</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Executive-In-Residence</fullName>
                </value>
                <value>
                    <fullName>Exhibitor Fees - Annual Conference</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agent - Finish Strong</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agent - MN Food Funder&apos;s Network</fullName>
                </value>
                <value>
                    <fullName>Grants - Advancing Voices</fullName>
                </value>
                <value>
                    <fullName>Grants - My Brother&apos;s Keeper</fullName>
                </value>
                <value>
                    <fullName>Grants - Public Policy</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Blandin Foundation</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Bush Foundation</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - F.R. Bigelow Foundation</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Greater Twin Cities United Way</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Medtronic Foundation</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Minneapolis Foundation</fullName>
                </value>
                <value>
                    <fullName>Grants - Ron McKinley Philanthropy Fellows - Saint Paul Foundation</fullName>
                </value>
                <value>
                    <fullName>Job Posting Income</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Advancing Voices</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Annual Conference</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - CEO Circle</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Community Foundation Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Contract Training</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Corporate Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Co-sponsored and Pop-up Programs</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Family Philanthropy Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Government Relations</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Grantmaking for the 21st Century</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Ledger_Code__c</fullName>
        <description>This is the General Ledger Account Code for this Opportunity.</description>
        <inlineHelpText>Select the correct General Ledger Code. This field is automatically set for Memberships (based on New or Renewal), and Event Registrations (based on the General Ledger Code on the Campaign.)</inlineHelpText>
        <label>General Ledger Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>General_Ledger_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>000-1010</fullName>
                </value>
                <value>
                    <fullName>000-1145</fullName>
                </value>
                <value>
                    <fullName>000-2080</fullName>
                </value>
                <value>
                    <fullName>000-2090</fullName>
                </value>
                <value>
                    <fullName>000-2098</fullName>
                </value>
                <value>
                    <fullName>000-2101</fullName>
                </value>
                <value>
                    <fullName>000-9995</fullName>
                </value>
                <value>
                    <fullName>140-3150</fullName>
                </value>
                <value>
                    <fullName>140-3300</fullName>
                </value>
                <value>
                    <fullName>190-3100-01</fullName>
                </value>
                <value>
                    <fullName>190-3100-02</fullName>
                </value>
                <value>
                    <fullName>190-3200</fullName>
                </value>
                <value>
                    <fullName>190-3900</fullName>
                </value>
                <value>
                    <fullName>220-3150</fullName>
                </value>
                <value>
                    <fullName>320-3150</fullName>
                </value>
                <value>
                    <fullName>320-3300-01</fullName>
                </value>
                <value>
                    <fullName>322-3150</fullName>
                </value>
                <value>
                    <fullName>322-3300</fullName>
                </value>
                <value>
                    <fullName>323-3150</fullName>
                </value>
                <value>
                    <fullName>323-3300</fullName>
                </value>
                <value>
                    <fullName>324-3150</fullName>
                </value>
                <value>
                    <fullName>324-3300</fullName>
                </value>
                <value>
                    <fullName>325-3150</fullName>
                </value>
                <value>
                    <fullName>325-3300</fullName>
                </value>
                <value>
                    <fullName>327-3150</fullName>
                </value>
                <value>
                    <fullName>327-3200</fullName>
                </value>
                <value>
                    <fullName>327-3300</fullName>
                </value>
                <value>
                    <fullName>330-3150</fullName>
                </value>
                <value>
                    <fullName>330-3300</fullName>
                </value>
                <value>
                    <fullName>340-3150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Great_Plains_Export_Date__c</fullName>
        <description>This is the date that the Opportunity was sent to Great Plains. It should be blank if the Opportunity has not been exported.</description>
        <inlineHelpText>This is the date that the Opportunity was sent to Great Plains. It should be blank if the Opportunity has not been exported.</inlineHelpText>
        <label>Great Plains Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impak_ID__c</fullName>
        <description>This is the Impak ID (in this case, the Impak Invoice ID).</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Impak ID (in this case, the Impak Invoice ID).</inlineHelpText>
        <label>Impak ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase_Decrease__c</fullName>
        <description>Calculates the difference between the projected amount (amount paid last year) and the amount paid or invoiced this year. A positive amount indicates they renewed for more than the expected amount. Only calculated on Paid, Invoiced or Renewal Declined.</description>
        <formula>IF(TEXT(StageName) = &quot;Invoiced&quot;  || TEXT(StageName) = &quot;Paid&quot; || TEXT(StageName) = &quot;Bill Me Now&quot; || TEXT(StageName) = &quot;Bill Me Later&quot; , Amount - Projected_Amount__c,  IF(TEXT(StageName) = &quot;Declined&quot;, 0-Projected_Amount__c, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the difference between the projected amount (amount paid last year) and the amount paid or invoiced this year. A positive amount indicates they renewed for more than the expected amount. Only calculated on Paid, Invoiced or Renewal Declined.</inlineHelpText>
        <label>Increase/Decrease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Age__c</fullName>
        <description>Shows how old an invoice is, if the Opportunity has been moved to the Invoice stage.</description>
        <formula>TODAY() - Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows how old an invoice is, if the Opportunity has been moved to the Invoice stage.</inlineHelpText>
        <label>Invoice Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Phone__c</fullName>
        <description>Formula field showing the phone number for the Invoice Contact (priority: Product Sale Contact &gt; Billing Contact &gt; Primary Contact &gt; NULL)</description>
        <formula>IF( gf_sf__Product_Sale_Contact__c &lt;&gt; NULL , gf_sf__Product_Sale_Contact__r.Phone , 

IF( Account.gf_sf__Billing_Contact__c &lt;&gt; NULL,  Account.gf_sf__Billing_Contact__r.Phone , 

IF( Account.gf_sf__Primary_Contact__c &lt;&gt; NULL,  Account.npe01__One2OneContact__r.Phone , NULL)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field showing the phone number for the Invoice Contact (priority: Product Sale Contact &gt; Billing Contact &gt; Primary Contact &gt; NULL)</inlineHelpText>
        <label>Invoice Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <description>Contact name that will show up on the invoice. Priority order: Product Sale Contact, Primary Contact for Account, Billing Contact for Account.</description>
        <formula>IF( gf_sf__Product_Sale_Contact__c &lt;&gt; NULL , 
gf_sf__Product_Sale_Contact__r.FirstName &amp;
IF( gf_sf__Product_Sale_Contact__r.MiddleName &lt;&gt; NULL, 
&quot; &quot; &amp; gf_sf__Product_Sale_Contact__r.MiddleName &amp; &quot; &quot;, 
&quot; &quot;) &amp;
 gf_sf__Product_Sale_Contact__r.LastName,


IF (Account.gf_sf__Billing_Contact__c &lt;&gt; NULL,
Account.gf_sf__Billing_Contact__r.FirstName &amp; 
IF( Account.gf_sf__Billing_Contact__r.Middle_Name__c &lt;&gt; NULL,
&quot; &quot; &amp; Account.gf_sf__Billing_Contact__r.Middle_Name__c &amp; &quot; &quot;, 
&quot; &quot;) &amp;  
Account.gf_sf__Billing_Contact__r.LastName,
   
IF (Account.gf_sf__Primary_Contact__c &lt;&gt; NULL,
Account.gf_sf__Primary_Contact__r.FirstName &amp; 
IF(Account.gf_sf__Primary_Contact__r.MiddleName &lt;&gt; NULL,
&quot; &quot; &amp; Account.gf_sf__Primary_Contact__r.MiddleName &amp; &quot; &quot;,
&quot; &quot;) &amp;
Account.gf_sf__Primary_Contact__r.LastName,

NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact name that will show up on the invoice. Priority order: Product Sale Contact, Primary Contact for Account, Billing Contact for Account.</inlineHelpText>
        <label>Invoice Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>This custom field is the date that will show up on the invoice. It is read-only for most users, and is controlled by a workflow rule when the Opportunity is changed to Closed/Won. To change this date, contact the database administrator.</description>
        <inlineHelpText>This custom field is the date that will show up on the invoice. It is read-only for most users, and is controlled by a workflow rule when the Opportunity is changed to Closed/Won. To change this date, contact the database administrator.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <description>This is the description that will be used on the detail line of the invoice.</description>
        <inlineHelpText>Enter the description that will be used on the detail line of the invoice.</inlineHelpText>
        <label>Invoice Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>This is the auto-generated invoice number for this invoice.</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>This is the auto-generated invoice number for this invoice.</inlineHelpText>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Is_Deferred_Revenue__c</fullName>
        <description>Compares the Close Date of the Opportunity to the Campaign Fiscal Year. If the Opportunity closed in the year before the event or campaign takes places, then it flags the Opportunity as Deferred Revenue.</description>
        <formula>IF(YEAR(Invoice_Date__c) &lt; VALUE(Campaign.Campaign_Fiscal_Year__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the Close Date of the Opportunity to the Campaign Fiscal Year. If the Opportunity closed in the year before the event or campaign takes places, then it flags the Opportunity as Deferred Revenue.</inlineHelpText>
        <label>Is Deferred Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Placement_Unfulfilled__c</fullName>
        <description>Logo placements that are still pending.</description>
        <inlineHelpText>Select the logo placements that are not yet fulfilled, or de-select the ones that are completed.</inlineHelpText>
        <label>Logo Placement Unfulfilled</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Signage</fullName>
                </value>
                <value>
                    <fullName>Email/E-newsletter</fullName>
                </value>
                <value>
                    <fullName>Giving Forum - Inside Front Cover</fullName>
                </value>
                <value>
                    <fullName>Meeting Materials</fullName>
                </value>
                <value>
                    <fullName>Podcast - On Audio Host Site</fullName>
                </value>
                <value>
                    <fullName>Save the Date Postcards</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Placement__c</fullName>
        <label>Logo Placement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Signage</fullName>
                </value>
                <value>
                    <fullName>Email/E-newsletter</fullName>
                </value>
                <value>
                    <fullName>Giving Forum - Inside Front Cover</fullName>
                </value>
                <value>
                    <fullName>Meeting Materials</fullName>
                </value>
                <value>
                    <fullName>Podcast - On Audio Host Site</fullName>
                </value>
                <value>
                    <fullName>Save the Date Postcards</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGO_Number_of_Users__c</fullName>
        <description>Shows how many users are on this particular MGO Subscription.</description>
        <inlineHelpText>Shows how many users are on this particular MGO Subscription.</inlineHelpText>
        <label>MGO Number of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MGO_Thank_You_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if a Thank You email has been sent for completed MGO orders.</description>
        <inlineHelpText>Shows if a Thank You email has been sent for completed MGO orders.</inlineHelpText>
        <label>MGO Thank You Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Close_Date_Formula__c</fullName>
        <description>Membership Close Date should be when we got the form, or when we got payment, whichever is earliest. Formula picks the earliest of the Date Renewal Form Received and Membership Paid Date.</description>
        <formula>IF( ISBLANK(Membership_Paid_Date__c), Date_Renewal_Form_Received__c, 
IF(Date_Renewal_Form_Received__c &lt;  Membership_Paid_Date__c , 
Date_Renewal_Form_Received__c, 
Membership_Paid_Date__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Membership Close Date should be when we got the form, or when we got payment, whichever is earliest. Formula picks the earliest of the Date Renewal Form Received and Membership Paid Date.</inlineHelpText>
        <label>Membership Close Date (Formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Close_Month__c</fullName>
        <formula>IF( YEAR(CloseDate) &lt;  VALUE(Membership_Year__c) , 
   CASE(MONTH( CloseDate ),
   10, &quot;02. Prev October&quot;,
   11, &quot;03. Prev November&quot;,
   12, &quot;04. Prev December&quot;,
   &quot;01. Earlier&quot;) , 
IF( YEAR(CloseDate) &gt;  VALUE(Membership_Year__c),CASE(MONTH( CloseDate ),
   1, &quot;17. Next January&quot;,
   &quot;18. Later&quot;) , 
CASE(MONTH( CloseDate ),
   1, &quot;05. January&quot;,
   2, &quot;06. February&quot;,
   3, &quot;07. March&quot;,
   4, &quot;08. April&quot;,
   5, &quot;09. May&quot;,
   6, &quot;10. June&quot;,
   7, &quot;11. July&quot;,
   8, &quot;12. August&quot;,
   9, &quot;13. September&quot;,
   10, &quot;14. October&quot;,
   11, &quot;15. November&quot;,
   12, &quot;16. December&quot;,
   &quot; &quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Paid_Date__c</fullName>
        <description>This is the date we received the payment for the membership.</description>
        <inlineHelpText>Enter the date the membership was paid.</inlineHelpText>
        <label>Membership Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Year__c</fullName>
        <description>Formula field. Pulls the year based on the Membership Start Date.</description>
        <formula>TEXT( YEAR( npe01__Membership_Start_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field. Pulls the year based on the Membership Start Date.</inlineHelpText>
        <label>Membership Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Allocation_Date__c</fullName>
        <description>Shows the created date of the most recent payment made to this Opportunity. For most opportunities, this is the date it was paid in full.</description>
        <inlineHelpText>Shows the created date of the most recent payment made to this Opportunity. For most opportunities, this is the date it was paid in full.</inlineHelpText>
        <label>Most Recent Allocation Date</label>
        <summarizedField>gf_pp__Allocation__c.CreatedDate</summarizedField>
        <summaryForeignKey>gf_pp__Allocation__c.gf_pp__Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name_Placement_Unfulfilled__c</fullName>
        <label>Name Placement Unfulfilled</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Signage</fullName>
                </value>
                <value>
                    <fullName>Email/E-newsletter</fullName>
                </value>
                <value>
                    <fullName>Giving Forum - Inside Front Cover</fullName>
                </value>
                <value>
                    <fullName>Meeting Materials</fullName>
                </value>
                <value>
                    <fullName>Podcast - On Audio Host Site</fullName>
                </value>
                <value>
                    <fullName>Save the Date Postcards</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>